--- a/fig/example-sbp.tex
+++ b/fig/example-sbp.tex
@@ -22,7 +22,7 @@
 
 \begin{center}
 	\begin{tabular}{lll}
-		Order &:& $ x_1 \prec x_2 \prec x_3 \prec x_4 \prec x_5 \prec x_6 \enskip \mid \enskip  (\false < \true)$ \\
+		Order &:& $ x_1 \prec x_2 \prec x_3 \prec x_4 \prec x_5 \prec x_6 \enskip ; \enskip  (\false < \true)$ \\
 		Permutation &:& $g_3 = (x_1 \enskip x_4)(x_2 \enskip x_5)(x_3 \enskip x_6)(\neg x_1 \enskip \neg x_4)(\neg x_2 \enskip \neg x_5)(\neg x_3 \enskip \neg x_6)$
 	\end{tabular}
 	
