--- a/main.bib
+++ b/main.bib
@@ -407,6 +407,16 @@
 	year={2002},
 	organization={ACM}
 }
+@article{aloul2003solving,
+	title={Solving difficult instances of Boolean satisfiability in the presence of symmetry},
+	author={Aloul, Fadi A and Ramani, Arathi and Markov, Igor L and Sakallah, Karem A},
+	journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+	volume={22},
+	number={9},
+	pages={1117--1137},
+	year={2003},
+	publisher={IEEE}
+}
 
 
 % Source Wikipedia
