--- a/fig/binary-sbp.tex
+++ b/fig/binary-sbp.tex
@@ -1,7 +1,7 @@
 
 \begin{center}
 \begin{tabular}{lll}
-	Order &:& $ x_1 \prec x_2 \prec x_3 \prec x_4 \prec x_5 \prec x_6 \enskip \mid \enskip  (\false < \true)$ \\
+	Order &:& $ x_1 \prec x_2 \prec x_3 \prec x_4 \prec x_5 \prec x_6 \enskip ; \enskip  (\false < \true)$ \\
 \end{tabular}
 \end{center}
 \vspace*{1\baselineskip}
