--- a/main.bib
+++ b/main.bib
@@ -503,6 +503,14 @@
 	organization={Springer}
 }
 
+@book{toth2002vehicle,
+	title={The vehicle routing problem},
+	author={Toth, Paolo and Vigo, Daniele},
+	year={2002},
+	publisher={SIAM}
+}
+
+
 % Incomplete algo
 
 @article{kautz2009incomplete,
@@ -523,6 +531,9 @@
 	pages={23--41},
 	year={1965}
 }
+
+
+
 
 
 
