--- a/main.tex
+++ b/main.tex
@@ -43,9 +43,10 @@ outer=3.8cm, % Outer margin
 \usepackage{calc,soul,fourier}
 \usepackage{phaistos} % animal symbols
 \usepackage{multirow}
-
+\usepackage{setspace}
 %\usepackage{DejaVuSans}
 %\usepackage[T1]{fontenc}
+
 
 
 %%% Colors ====================================================================
