--- a/sbp-table.tex
+++ b/sbp-table.tex
@@ -1,6 +1,8 @@
 \begin{center}
-	\hakan{Mette des espaces pour les nombres et texte pour expliquer si tableau ok}\\
-	\hakan{Mettre total de clause et vars et pourcentage d'augmentation}
+%	\hakan{Mette des espaces pour les nombres et texte pour expliquer si tableau ok}\\
+%	\hakan{Mettre total de clause et vars et pourcentage d'augmentation}
+%
+\begin{table}[!htbp]
 \begin{tabular}{lcccc}
 	Instances & \#vars & \#clause & \#sbp & \#auxiliary variables \\
 	\toprule
@@ -41,4 +43,7 @@
 	\detokenize{x1_40} &  314 &  118 &  42 &  1\\
 	\detokenize{x1_80} &  634 &  238 &  80 &  0\\
 \end{tabular}
+	\caption{Number of sbps generated on different problem categories}
+	\label{tab:numsbp}
+\end{table}	
 \end{center}
