--- a/hybrid_cosy_spfs.tex
+++ b/hybrid_cosy_spfs.tex
@@ -1,4 +1,4 @@
-\chapter{Compose dynamic symmetry handling}
+\chapter{Compose dynamic symmetry handling}\label{chap:compose}
 \minitoc
 \section{Composition of SP and SymmSAT}
 Recently, we developed an approach that reuses the
