--- a/main.bib
+++ b/main.bib
@@ -503,6 +503,16 @@
 	organization={Springer}
 }
 
+@inproceedings{heule2016solving,
+	title={Solving and verifying the boolean pythagorean triples problem via cube-and-conquer},
+	author={Heule, Marijn JH and Kullmann, Oliver and Marek, Victor W},
+	booktitle={International Conference on Theory and Applications of Satisfiability Testing},
+	pages={228--245},
+	year={2016},
+	organization={Springer}
+}
+
+
 @book{toth2002vehicle,
 	title={The vehicle routing problem},
 	author={Toth, Paolo and Vigo, Daniele},
